[tool.poetry]
name = "repl-nix-medexamanalyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
openai = "^1.45.0"
werkzeug = "^3.0.4"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
